maze.lessons.maze.island.IslandMaze.scala.error
Escaper:20: error: expected class or object definition
def murgauche(): Boolean ={
^Escaper:32: error: expected class or object definition
def murdroite(): Boolean ={
^Escaper:42: error: expected class or object definition
def av(){
^Escaper:56: error: Unmatched closing brace '}' ignored here
}
^